--- a/package.json
+++ b/package.json
@@ -13,40 +13,43 @@
     "test": "jest -c test/jest.config.js"
   },
   "dependencies": {
-    "next": "^12.1.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "next-compose-plugins": "^2.2.1",
-    "antd": "^4.10.2",
     "@ant-design/icons": "^4.4.0",
-    "sass": "^1.32.5",
-    "axios": "^0.21.1",
     "@apollo/client": "^3.3.7",
+    "@reduxjs/toolkit": "^1.6.0",
+    "antd": "^4.10.2",
+    "axios": "^0.21.1",
     "graphql": "^15.4.0",
     "graphql-request": "^3.4.0",
-    "swr": "^0.4.0",
+    "next": "^12.1.6",
+    "next-compose-plugins": "^2.2.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-feather": "^2.0.10",
     "react-query": "^3.5.16",
-    "react-use": "^15.3.8",
     "react-redux": "^7.2.4",
-    "@reduxjs/toolkit": "^1.6.0"
+    "react-use": "^15.3.8",
+    "sass": "^1.32.5",
+    "style-components": "^0.1.0",
+    "styled-components": "^5.3.5",
+    "swr": "^0.4.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.13",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "typescript": "^4.1.3",
-    "apollo": "^2.32.1",
     "@graphql-codegen/cli": "^1.20.0",
     "@graphql-codegen/typescript": "^1.20.0",
     "@graphql-codegen/typescript-operations": "^1.17.13",
-    "@types/react-redux": "^7.1.16",
     "@testing-library/react": "^11.2.3",
     "@testing-library/react-hooks": "^5.0.0",
+    "@types/node": "^14.14.13",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
+    "apollo": "^2.32.1",
+    "dotenv": "^8.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.4.4",
-    "nock": "^13.0.6",
     "isomorphic-unfetch": "^3.1.0",
-    "dotenv": "^8.2.0"
+    "jest": "^26.6.3",
+    "nock": "^13.0.6",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
   }
 }
